# Sign_detection_tfobj

./: DataCollection.ipynb  README.md  main.py  modelTraining.ipynb  pyproject.toml
Tensorflow/workspace/annotations/: label_map.pbtxt  test.record
Tensorflow/workspace/models/my_ssd_mobnet/: checkpoint  ckpt-10.index  ckpt-11.index  ckpt-5.index  ckpt-6.index  ckpt-7.index  ckpt-8.index  ckpt-9.index
Tensorflow/workspace/models/my_ssd_mobnet/eval/: events.out.tfevents.1769435359.LAPTOP-EITQ4R9G.20356.0.v2  events.out.tfevents.1769435573.LAPTOP-EITQ4R9G.20012.0.v2  events.out.tfevents.1771506325.LAPTOP-EITQ4R9G.11996.0.v2
Tensorflow/workspace/models/my_ssd_mobnet/export/checkpoint/: checkpoint  ckpt-0.index
Tensorflow/workspace/models/my_ssd_mobnet/export/saved_model/: fingerprint.pb
Tensorflow/workspace/models/my_ssd_mobnet/export/saved_model/variables/: variables.index
Tensorflow/workspace/models/my_ssd_mobnet/tfjsexport/: model.json
Tensorflow/workspace/models/my_ssd_mobnet/tfliteexport/saved_model/: fingerprint.pb
Tensorflow/workspace/models/my_ssd_mobnet/tfliteexport/saved_model/variables/: variables.index
Tensorflow/workspace/models/my_ssd_mobnet/train/: events.out.tfevents.1769348775.LAPTOP-EITQ4R9G.4588.0.v2  events.out.tfevents.1769354024.LAPTOP-EITQ4R9G.10984.0.v2  events.out.tfevents.1769356471.LAPTOP-EITQ4R9G.4036.0.v2  events.out.tfevents.1769396517.LAPTOP-EITQ4R9G.14816.0.v2  events.out.tfevents.1769401223.LAPTOP-EITQ4R9G.9400.0.v2
