[project]
name = "realobjectdetection"
version = "0.1.0"
description = "TensorFlow Object Detection Project"
readme = "README.md"
requires-python = ">=3.9,<3.11"

dependencies = [
    # Core TF stack (LOCKED)
    "tensorflow==2.12.0",
    "keras==2.12.0",
    "tensorflow-estimator==2.12.0",
    "tensorboard==2.12.3",
    # Required by TF Object Detection API
    "protobuf==3.20.3",
    "numpy==1.23.5",
    "absl-py>=1.4.0,<2.0",
    "six>=1.16.0",
    "pyyaml>=5.4.1,<6.1",
    "pillow>=9.5.0,<11.0",
    "lxml>=4.9.3,<6.0",
    "matplotlib>=3.7.1,<3.10",
    "contextlib2",
    "cython",
    "tqdm",
    # TF ecosystem
    "tf-slim==1.1.0",
    "tensorflow-addons==0.20.0",
    "tensorflow-io==0.31.0",
    # Vision / utils
    "opencv-python>=4.7.0,<5.0",
    "wget",
    # Jupyter
    "ipykernel>=6.25.0,<7.0",
    "pandas>=2.3.3",
    "pycocotools>=2.0.11",
    "lvis>=0.5.3",
    "gin>=0.1.6",
    "gin-config>=0.5.0",
    "pyqt5>=5.15.11",
    "tensorflowjs>=3.18.0",
]

[tool.uv]
required-environments = [
  "sys_platform == 'win32' and platform_machine == 'AMD64'"
]
